@@ -53,20 +53,20 @@ installcheck :
 	fi
 
 installdirs :
-	$(INSTALL) -d $(DESTDIR)$(INST_LIBDIR) $(DESTDIR)$(INST_HIDIR) $(DESTDIR)$(INST_INCLDIR)
+	$(INSTALL_DIR) $(DESTDIR)$(INST_LIBDIR) $(DESTDIR)$(INST_HIDIR) $(DESTDIR)$(INST_INCLDIR)
 
 install-without-pkg : $(TARGETOK) installdirs installfiles
 
 install : install-without-pkg install-pkg
 
 installfiles : $(PACKAGENAME).conf
-	$(INSTALL) -m644 $(ALLHSFILES:.hs=.hi) $(DESTDIR)$(INST_HIDIR)
-	$(INSTALL) -m644 $(TARGETOK) $(DESTDIR)$(INST_LIBDIR)
+	$(INSTALL_DATA) $(ALLHSFILES:.hs=.hi) $(DESTDIR)$(INST_HIDIR)
+	$(INSTALL_DATA) $(TARGETOK) $(DESTDIR)$(INST_LIBDIR)
 	$(TOUCH) -r $(TARGETOK) $(DESTDIR)$(INST_LIBDIR)/$(TARGETOK)
 ifneq ($(strip $(STUBHFILES) $(EXTRA_HFILESOK)),)
-	$(INSTALL) -m644 $(STUBHFILES) $(EXTRA_HFILESOK) $(DESTDIR)$(INST_INCLDIR)
+	$(INSTALL_DATA) $(STUBHFILES) $(EXTRA_HFILESOK) $(DESTDIR)$(INST_INCLDIR)
 endif
-	$(INSTALL) -m644 $(PACKAGENAME).conf $(DESTDIR)$(INST_LIBDIR)
+	$(INSTALL_DATA) $(PACKAGENAME).conf $(DESTDIR)$(INST_LIBDIR)
 
 $(PACKAGENAME).conf :
 	@echo Package {\
